# nit

./: Cargo.toml  flake.nix  result
nix/: hm-module.nix
src/: main.rs
